2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/54_println_void.deca
// Description :
//     passer vois à println
// Resultats :
//    Erreur Contexteulle : ligne 10 : void identificateur non déclaré
//
// Historique :
// cree le 10/01/2024

{
    println(void);
}